@@ -457,6 +457,10 @@ const NSInteger	kCCZoomActionTag = 0xc0c05002;
 
 #pragma mark - CCMenuItemSprite
 
+@interface CCMenuItemSprite()
+-(void) updateImagesVisibility;
+@end
+
 @implementation CCMenuItemSprite
 
 @synthesize normalImage=normalImage_, selectedImage=selectedImage_, disabledImage=disabledImage_;
@@ -516,7 +520,6 @@ const NSInteger	kCCZoomActionTag = 0xc0c05002;
 {
 	if( image != normalImage_ ) {
 		image.anchorPoint = ccp(0,0);
-		image.visible = YES;
 
 		[self removeChild:normalImage_ cleanup:YES];
 		[self addChild:image];
@@ -524,6 +527,8 @@ const NSInteger	kCCZoomActionTag = 0xc0c05002;
 		normalImage_ = image;
         
         [self setContentSize: [normalImage_ contentSize]];
+		
+		[self updateImagesVisibility];
 	}
 }
 
@@ -531,12 +536,13 @@ const NSInteger	kCCZoomActionTag = 0xc0c05002;
 {
 	if( image != selectedImage_ ) {
 		image.anchorPoint = ccp(0,0);
-		image.visible = NO;
 
 		[self removeChild:selectedImage_ cleanup:YES];
 		[self addChild:image];
 
 		selectedImage_ = image;
+		
+		[self updateImagesVisibility];
 	}
 }
 
@@ -544,12 +550,13 @@ const NSInteger	kCCZoomActionTag = 0xc0c05002;
 {
 	if( image != disabledImage_ ) {
 		image.anchorPoint = ccp(0,0);
-		image.visible = NO;
 
 		[self removeChild:disabledImage_ cleanup:YES];
 		[self addChild:image];
 
 		disabledImage_ = image;
+		
+		[self updateImagesVisibility];
 	}
 }
 
@@ -606,13 +613,22 @@ const NSInteger	kCCZoomActionTag = 0xc0c05002;
 
 -(void) setIsEnabled:(BOOL)enabled
 {
-	[super setIsEnabled:enabled];
+	if( isEnabled_ != enabled ) {
+		[super setIsEnabled:enabled];
 
-	if( enabled ) {
+		[self updateImagesVisibility];
+	}
+}
+
+
+// Helper 
+-(void) updateImagesVisibility
+{
+	if( isEnabled_ ) {
 		[normalImage_ setVisible:YES];
 		[selectedImage_ setVisible:NO];
 		[disabledImage_ setVisible:NO];
-
+		
 	} else {
 		if( disabledImage_ ) {
 			[normalImage_ setVisible:NO];
@@ -825,9 +841,11 @@ const NSInteger	kCCZoomActionTag = 0xc0c05002;
 
 -(void) setIsEnabled: (BOOL)enabled
 {
-	[super setIsEnabled:enabled];
-	for(CCMenuItem* item in subItems_)
-		[item setIsEnabled:enabled];
+	if( isEnabled_ != enabled ) {
+		[super setIsEnabled:enabled];
+		for(CCMenuItem* item in subItems_)
+			[item setIsEnabled:enabled];
+	}
 }
 
 -(CCMenuItem*) selectedItem
